--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-09-18  Devang Patel  <dpatel@apple.com>
+
+	* cp/cp-tree.h: New prototype for walk_vtabls().        
+	* cp/decl.c (walk_vtables_r): New function.        
+	(struct cp_binding_level): Add new members, namespaces,        
+	names_size and vtables.        
+	(add_decl_to_level): Add decl in namespaces or vtables        
+	chain, if conditions match.        
+	(walk_vtables): New function.        
+	(walk_namespaces_r): Travers separate namespace chain        
+	for namespace decls.        
+	(wrapup_globals_for_namespace): Use names_size instead        
+	of list_length().        
+	* cp/decl2.c (finish_file): Use walk_vtables() instead of        
+	walk_globals() to walk vtable decls.        
+		
 2002-09-19  Steve Ellcey  <sje@cup.hp.com>
 
 	* config/ia64/hpux.h (CTORS_SECTION_ASM_OP): New.
@@ -279,7 +295,6 @@ Tue Sep 17 13:40:13 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 	* real.h (real_nan): Return bool.
 	* doc/extend.texi: Document new builtins.
 
->>>>>>> 1.15460
 2002-09-16  Jason Merrill  <jason@redhat.com>
 	    Danny Smith  <dannysmith@users.sourceforge.net>
 
