* config/s390/s390.c (addr_generation_dependency_p): Handle SUBREG 	and STRICT_LOW_PART within SET_DEST. 	* config/s390/s390.md ("*extractqi", "*extracthi"): New insns with 	splitters, replacing pre-reload splitters. 	("*zero_extendhisi2_31", "*zero_extendqisi2_31", 	"*zero_extendqihi2_31"): New insns. 	("*zero_extendqihi2_64"): Do not clobber CC.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57309 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-19  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (addr_generation_dependency_p): Handle SUBREG 
+	and STRICT_LOW_PART within SET_DEST.
+	* config/s390/s390.md ("*extractqi", "*extracthi"): New insns with
+	splitters, replacing pre-reload splitters.
+	("*zero_extendhisi2_31", "*zero_extendqisi2_31", 
+	"*zero_extendqihi2_31"): New insns.
+	("*zero_extendqihi2_64"): Do not clobber CC.
+
 2002-09-18  Devang Patel  <dpatel@apple.com>
 
 	* cp/cp-tree.h: New prototype for walk_vtabls().        
