--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-19  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/ClassLoader.java (resolveClass0): Set cause for
+	newly-created exception.
+
 2002-09-18  Michael Koch  <konqueror@gmx.de>
 
 	* java/util/regex/Matcher.java, java/util/regex/Pattern.java,
