Remove creation of invalid subreg. PR 7705, 7339, 7720.
From-SVN: r57315

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-19  Dale Johannesen <dalej@apple.com>
+	* combine.c (make_extraction): Don't create
+	invalid subreg.
+
 2002-09-19  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (addr_generation_dependency_p): Handle SUBREG 
