fix subreg optimization bug introduced 2002-05-25 	* combine.c (simplify_set): When optimizing a subreg src with a 	cc0 dest, use GET_MODE (src) for mask instead of inner_mode.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57323 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-19  Jim Wilson  <wilson@redhat.com>
+
+	* combine.c (simplify_set): When optimizing a subreg src with a
+	cc0 dest, use GET_MODE (src) for mask instead of inner_mode.
+
 2002-09-19  Dale Johannesen <dalej@apple.com>
 	* combine.c (make_extraction): Don't create
 	invalid subreg.
