--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-19  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libiberty.h (asprintf, vasprintf): Don't declare them if the
+	corresponding HAVE_DECL_ macro is 1.
+
 2002-06-25  Alan Modra  <amodra@bigpond.net.au>
 
 	* demangle.h: #include "ansidecl.h" rather than #include <ansidecl.h>.
