--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-20  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* lib/scanasm.exp (scan-assembler-dem, scan-assembler-dem-not):
+	Adjust for c++filt moved to binutils.
+
 2002-09-19  Geoffrey Keating  <geoffk@apple.com>
 
 	* gcc.dg/20020312-2.c: Update for darwin.
