Mention removed duplicate cxxfilt setting
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,7 +1,8 @@
 2002-09-20  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* lib/scanasm.exp (scan-assembler-dem, scan-assembler-dem-not):
-	Adjust for c++filt moved to binutils.
+	Adjust for c++filt moved to binutils.  Remove spurious duplicate
+	setting of cxxfilt.
 
 2002-09-19  Geoffrey Keating  <geoffk@apple.com>
 
