--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-20  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.c-torture/execute/ieee/mzero3.c: New test.
+
 2002-09-06  Alan Modra  <amodra@bigpond.net.au>
 
 	* gcc.c-torture/execute/extzvsi.c: New test.
