--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-09-20  Richard Earnshaw  <rearnsha@arm.com>
 
+	* gcc.c-torture/execute/20020720-1.x: Skip test on ARM-based systems.
+
+2002-09-20  Richard Earnshaw  <rearnsha@arm.com>
+
 	* gcc.c-torture/execute/990208-1.x: XFAIL this at -O3 for ARM-based
 	systems.
 
