* config/i386/i386.c (legitimate_pic_address_disp_p): Allow 	UNSPEC_NTPOFF and UNSPEC_DTPOFF to be offsetted by constant.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57351 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (legitimate_pic_address_disp_p): Allow
+	UNSPEC_NTPOFF and UNSPEC_DTPOFF to be offsetted by constant.
+
 2002-09-20  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
 
 	* config/arm/arm.md (sign_extract_onebit, not_signextract_onebit):
