--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-09-20  Geoffrey Keating  <geoffk@apple.com>
+
+	* config/rs6000/rs6000.h (ELIMINABLE_REGS): Use
+	RS6000_PIC_OFFSET_TABLE_REGNUM rather than hardcoding 30.
+	(CAN_ELIMINATE): Likewise.
+	(INITIAL_ELIMINATION_OFFSET): Likewise.
+	(TOC_REGISTER): Likewise.
+
 2002-09-20  Richard Henderson  <rth@redhat.com>
 
 	* real.c (real_hash): New.
