--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/struct-1.c: New test.
+
 2002-09-20  Neil Booth  <neil@daikokuya.co.uk>
 
 	* gcc.dg/cpp/tr-warn2.c: Update.
