2002-09-20  Nathanael Nerode <neroden@doctor.moo.mud.org>
	* configure.in: Rearrange.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57369 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-20  Nathanael Nerode <neroden@doctor.moo.mud.org>
+
+	* configure.in: Rearrange.
+
 2002-09-14  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS: Update my email address.
