* testsuite/gcc.dg/cpp/tr-warn2.c: Additional test.
From-SVN: r57370

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -12,7 +12,7 @@
 2002-09-20  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cppmacro.c: Don't warn about function-like macros without
-	'(' during pre-expandion.
+	'(' during pre-expansion.
 
 2002-09-20  Jim Wilson  <wilson@redhat.com>
 
