--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-20  Jim Wilson  <wilson@redhat.com>
+
+	* combine.c (try_combine): When split an instruction pair, where the
+	first has a sign_extend src, verify that the src and dest modes match.
+
 2002-09-20  Richard Henderson  <rth@redhat.com>
 
 	* config/mips/mips.c (dfhigh, dflow, sfhigh, sflow): Remove.
