--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -61,6 +61,8 @@
    (UNSPEC_TPOFF		4)
    (UNSPEC_NTPOFF		5)
    (UNSPEC_DTPOFF		6)
+   (UNSPEC_GOTNTPOFF		7)
+   (UNSPEC_INDNTPOFF		8)
 
    ; Prologue support
    (UNSPEC_STACK_PROBE		10)
