* config/rs6000/rs6000.md (builtin_setjmp_receiver): Add 	#if TARGET_MACHO.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57379 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-21  Alan Modra  <amodra@bigpond.net.au>
 
+	* config/rs6000/rs6000.md (builtin_setjmp_receiver): Add
+	#if TARGET_MACHO.
+
 	* config/rs6000/rs6000.md (floatdisf2_internal2): Combine
 	insns.  Supply missing clobber of scratch reg.
 
