--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -10254,6 +10254,7 @@
    || (DEFAULT_ABI == ABI_DARWIN && flag_pic)"
   "
 {
+#if TARGET_MACHO
   if (DEFAULT_ABI == ABI_DARWIN)
     {
       char *picbase = machopic_function_base_name ();
@@ -10270,6 +10271,7 @@
       emit_insn (gen_macho_correct_pic (picreg, picreg, picrtx, tmplabrtx));
     }
   else
+#endif
     rs6000_emit_load_toc_table (FALSE);
   DONE;
 }")
